fix overflow on hamburger overlay

--- a/client/static_src/components/Hamburger/Hamburger.less
+++ b/client/static_src/components/Hamburger/Hamburger.less
@@ -62,7 +62,7 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &__logo {
     max-width: 400px;
